crates/swc_ecma_parser/tests/flow/types/object/unexpected_static_006.js
// error: static poly method named static
type I = { static static<X>(): R }
